<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SinupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="visible">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:srcCompat="@drawable/food__img"
                 />

            <TextView
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/upload_image"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginBottom="23dp"
                android:background="#181616" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/textborder"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/textborder"
                android:ems="10"
                android:hint="@string/_91_1234567890"
                android:inputType="phone"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/textborder"
                android:ems="10"
                android:hint="@string/strong_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/textborder"
                android:ems="10"
                android:hint="@string/abc_gmail_com"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                android:text="@string/register"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="80dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:background="#1B1A1A"
                    android:backgroundTint="#161615" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:text="@string/or_with"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="80dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:background="#1D1C1C" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#2E5794"
                    android:drawableStart="@drawable/facebook"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/facebook"
                    android:textColor="#F8F4F4"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="#D55048"
                    android:drawableLeft="@drawable/glimg"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Google"
                    android:textColor="#F2ECEC"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/gotologin"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/already_have_account_login"
                android:textColor="#101010"
                android:textStyle="bold" />
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>