<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_sinin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/fl"
                    app:tint="#D98E20" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/maurya_cafe"
                    android:textColor="#D98E20"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/textborder"
                    android:ems="10"
                    android:hint="@string/abc_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/textborder"
                    android:ems="10"
                    android:hint="@string/strong_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/sinin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/black"
                    android:text="@string/sign"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="80dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center"
                        android:background="#1B1A1A"
                        android:backgroundTint="#161615" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:gravity="center"
                        android:text="@string/or_with"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="80dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center"
                        android:background="#1D1C1C" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFacebook"
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:layout_weight="1"
                        android:background="#2E5794"

                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/facebook"
                        android:textColor="#F8F4F4"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvGoogle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="#D55048"

                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/google"
                        android:textColor="#F2ECEC"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
